{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 121,
  "lineage": "a0495a08-bb9b-347a-01d3-a1264375da68",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a916321557353d4",
            "arn": "arn:aws:ec2:us-east-2:727529935876:elastic-ip/eipalloc-03a916321557353d4",
            "association_id": "eipassoc-072d256fc42ee854d",
            "domain": "vpc",
            "id": "eipalloc-03a916321557353d4",
            "network_border_group": "us-east-2",
            "network_interface": "eni-098350d94838513b5",
            "private_dns": "ip-10-0-1-165.us-east-2.compute.internal",
            "private_ip": "10.0.1.165",
            "public_dns": "ec2-3-150-42-124.us-east-2.compute.amazonaws.com",
            "public_ip": "3.150.42.124",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mmm-nat-eip-1-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-nat-eip-1-production",
              "Project": "mmm-application"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d60fd856cf998b08",
            "arn": "arn:aws:ec2:us-east-2:727529935876:elastic-ip/eipalloc-0d60fd856cf998b08",
            "association_id": "eipassoc-0e52effe9fc8a2273",
            "domain": "vpc",
            "id": "eipalloc-0d60fd856cf998b08",
            "network_border_group": "us-east-2",
            "network_interface": "eni-02fdce26ca98ab72e",
            "private_dns": "ip-10-0-2-199.us-east-2.compute.internal",
            "private_ip": "10.0.2.199",
            "public_dns": "ec2-18-216-93-141.us-east-2.compute.amazonaws.com",
            "public_ip": "18.216.93.141",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mmm-nat-eip-2-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-nat-eip-2-production",
              "Project": "mmm-application"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:727529935876:internet-gateway/igw-087e3298161de5df3",
            "id": "igw-087e3298161de5df3",
            "owner_id": "727529935876",
            "tags": {
              "Name": "mmm-igw-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-igw-production",
              "Project": "mmm-application"
            },
            "vpc_id": "vpc-06e1454d3a82ffa92"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:727529935876:loadbalancer/app/mmm-alb-production/a7f30b5b30830720",
            "arn_suffix": "app/mmm-alb-production/a7f30b5b30830720",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mmm-alb-production-190214907.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:727529935876:loadbalancer/app/mmm-alb-production/a7f30b5b30830720",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mmm-alb-production",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c0ff3dbb566cfc85"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-036d86037633386dd"
              },
              {
                "subnet_id": "subnet-09b761d100e666108"
              }
            ],
            "subnets": [
              "subnet-036d86037633386dd",
              "subnet-09b761d100e666108"
            ],
            "tags": {
              "Name": "mmm-alb-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-alb-production",
              "Project": "mmm-application"
            },
            "vpc_id": "vpc-06e1454d3a82ffa92",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:727529935876:listener/app/mmm-alb-production/a7f30b5b30830720/c873f9df44633c17",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:727529935876:targetgroup/mmm-default-production/a2d023a15cd41627",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:727529935876:listener/app/mmm-alb-production/a7f30b5b30830720/c873f9df44633c17",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:727529935876:loadbalancer/app/mmm-alb-production/a7f30b5b30830720",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "mmm-alb-listener-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-alb-listener-production",
              "Project": "mmm-application"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.default",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "ecs_temp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:727529935876:targetgroup/mmm-ecs-temp-production/d754e79943b873f7",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:727529935876:listener-rule/app/mmm-alb-production/a7f30b5b30830720/c873f9df44633c17/b37b9880c13a2e26",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:727529935876:listener-rule/app/mmm-alb-production/a7f30b5b30830720/c873f9df44633c17/b37b9880c13a2e26",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:727529935876:listener/app/mmm-alb-production/a7f30b5b30830720/c873f9df44633c17",
            "priority": 100,
            "tags": {},
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "mmm-application"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.main",
            "aws_lb_target_group.default",
            "aws_lb_target_group.ecs_temp",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "client_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "client_1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:727529935876:targetgroup/mmm-mmm-demo-production/62f4485be3924b86",
            "arn_suffix": "targetgroup/mmm-mmm-demo-production/62f4485be3924b86",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:727529935876:targetgroup/mmm-mmm-demo-production/62f4485be3924b86",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mmm-mmm-demo-production",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ClientId": "mmm-demo",
              "Name": "mmm-mmm-demo-tg-production"
            },
            "tags_all": {
              "ClientId": "mmm-demo",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-mmm-demo-tg-production",
              "Project": "mmm-application"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06e1454d3a82ffa92"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:727529935876:targetgroup/mmm-default-production/a2d023a15cd41627",
            "arn_suffix": "targetgroup/mmm-default-production/a2d023a15cd41627",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:727529935876:targetgroup/mmm-default-production/a2d023a15cd41627",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:727529935876:loadbalancer/app/mmm-alb-production/a7f30b5b30830720"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mmm-default-production",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "mmm-default-tg-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-default-tg-production",
              "Project": "mmm-application"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06e1454d3a82ffa92"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_temp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:727529935876:targetgroup/mmm-ecs-temp-production/d754e79943b873f7",
            "arn_suffix": "targetgroup/mmm-ecs-temp-production/d754e79943b873f7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:727529935876:targetgroup/mmm-ecs-temp-production/d754e79943b873f7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:727529935876:loadbalancer/app/mmm-alb-production/a7f30b5b30830720"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mmm-ecs-temp-production",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "mmm-ecs-temp-tg-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-ecs-temp-tg-production",
              "Project": "mmm-application"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06e1454d3a82ffa92"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a916321557353d4",
            "association_id": "eipassoc-072d256fc42ee854d",
            "connectivity_type": "public",
            "id": "nat-04901ec85e4c60a11",
            "network_interface_id": "eni-098350d94838513b5",
            "private_ip": "10.0.1.165",
            "public_ip": "3.150.42.124",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09b761d100e666108",
            "tags": {
              "Name": "mmm-nat-1-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-nat-1-production",
              "Project": "mmm-application"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d60fd856cf998b08",
            "association_id": "eipassoc-0e52effe9fc8a2273",
            "connectivity_type": "public",
            "id": "nat-00d7083359b106a3b",
            "network_interface_id": "eni-02fdce26ca98ab72e",
            "private_ip": "10.0.2.199",
            "public_ip": "18.216.93.141",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-036d86037633386dd",
            "tags": {
              "Name": "mmm-nat-2-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-nat-2-production",
              "Project": "mmm-application"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:727529935876:route-table/rtb-06c674deeda76fba8",
            "id": "rtb-06c674deeda76fba8",
            "owner_id": "727529935876",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04901ec85e4c60a11",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mmm-private-rt-1-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-private-rt-1-production",
              "Project": "mmm-application"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e1454d3a82ffa92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:727529935876:route-table/rtb-004727468cc8e84f9",
            "id": "rtb-004727468cc8e84f9",
            "owner_id": "727529935876",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00d7083359b106a3b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mmm-private-rt-2-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-private-rt-2-production",
              "Project": "mmm-application"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e1454d3a82ffa92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:727529935876:route-table/rtb-06aad1a2d5e530c26",
            "id": "rtb-06aad1a2d5e530c26",
            "owner_id": "727529935876",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-087e3298161de5df3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mmm-public-rt-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-public-rt-production",
              "Project": "mmm-application"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e1454d3a82ffa92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b3cdcfcf5e6867f",
            "route_table_id": "rtb-06c674deeda76fba8",
            "subnet_id": "subnet-01859613aa1da234e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06eb5d577463c1b50",
            "route_table_id": "rtb-004727468cc8e84f9",
            "subnet_id": "subnet-092caca14aa9937e6"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03eda6797f50dfb2b",
            "route_table_id": "rtb-06aad1a2d5e530c26",
            "subnet_id": "subnet-09b761d100e666108"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0807af1a537c7b206",
            "route_table_id": "rtb-06aad1a2d5e530c26",
            "subnet_id": "subnet-036d86037633386dd"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:727529935876:security-group/sg-0c0ff3dbb566cfc85",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0ff3dbb566cfc85",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mmm-alb-20250910142135312700000001",
            "name_prefix": "mmm-alb-",
            "owner_id": "727529935876",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mmm-alb-sg-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-alb-sg-production",
              "Project": "mmm-application"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e1454d3a82ffa92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:727529935876:security-group/sg-0220499b7953d2e79",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0220499b7953d2e79",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0ff3dbb566cfc85"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "mmm-ecs-20250910142137874300000003",
            "name_prefix": "mmm-ecs-",
            "owner_id": "727529935876",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mmm-ecs-sg-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-ecs-sg-production",
              "Project": "mmm-application"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e1454d3a82ffa92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:727529935876:security-group/sg-0449ab383166c553d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0449ab383166c553d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0220499b7953d2e79"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "mmm-rds-20250910142140373700000005",
            "name_prefix": "mmm-rds-",
            "owner_id": "727529935876",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mmm-rds-sg-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-rds-sg-production",
              "Project": "mmm-application"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e1454d3a82ffa92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:727529935876:security-group/sg-04af9682df161eb3d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04af9682df161eb3d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0220499b7953d2e79"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "mmm-redis-20250910142140373500000004",
            "name_prefix": "mmm-redis-",
            "owner_id": "727529935876",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mmm-redis-sg-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-redis-sg-production",
              "Project": "mmm-application"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e1454d3a82ffa92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:727529935876:subnet/subnet-01859613aa1da234e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01859613aa1da234e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727529935876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mmm-private-subnet-1-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-private-subnet-1-production",
              "Project": "mmm-application"
            },
            "vpc_id": "vpc-06e1454d3a82ffa92"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:727529935876:subnet/subnet-092caca14aa9937e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092caca14aa9937e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727529935876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mmm-private-subnet-2-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-private-subnet-2-production",
              "Project": "mmm-application"
            },
            "vpc_id": "vpc-06e1454d3a82ffa92"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:727529935876:subnet/subnet-09b761d100e666108",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b761d100e666108",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "727529935876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mmm-public-subnet-1-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-public-subnet-1-production",
              "Project": "mmm-application"
            },
            "vpc_id": "vpc-06e1454d3a82ffa92"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:727529935876:subnet/subnet-036d86037633386dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036d86037633386dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "727529935876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mmm-public-subnet-2-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-public-subnet-2-production",
              "Project": "mmm-application"
            },
            "vpc_id": "vpc-06e1454d3a82ffa92"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:727529935876:vpc/vpc-06e1454d3a82ffa92",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0befbad7633ac1ae6",
            "default_route_table_id": "rtb-0e4441790743d7eac",
            "default_security_group_id": "sg-0bbb362a2670aafa2",
            "dhcp_options_id": "dopt-0ab5f918539606b85",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e1454d3a82ffa92",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e4441790743d7eac",
            "owner_id": "727529935876",
            "tags": {
              "Name": "mmm-vpc-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mmm-vpc-production",
              "Project": "mmm-application"
            }
          }
        }
      ]
    }
  ]
}